# AdventOfHardcaml

./: .gitignore  LICENSE  README.md  create_new_day.py  dune-project
Days/Day01a/: Day01a.ml  Day01a_tb.ml  Day01a_v.ml  dune
Days/Day01b/: Day01b.ml  Day01b_tb.ml  Day01b_v.ml  dune
Days/Day02a/: Day02a.ml  Day02a_tb.ml  Day02a_v.ml  dune
Days/Day02b/: Day02b.ml  Day02b_tb.ml  Day02b_v.ml  dune
Days/Day03a/: Day03a.ml  Day03a_input.txt  Day03a_tb.ml  Day03a_v.ml  dune
Days/Day03b/: Day03b.ml  Day03b_tb.ml  Day03b_v.ml  dune
Days/Day04a/: Day04a.ml  Day04a_tb.ml  Day04a_v.ml  dune
Days/Day04b/: Day04b.ml  Day04b_tb.ml  Day04b_v.ml  dune
Days/Day05a/: Day05a.ml  Day05a_tb.ml  Day05a_v.ml  dune
Days/Day05b/: Day05b.ml  Day05b_tb.ml  Day05b_v.ml  dune
Days/Day06a/: Day06a.ml  Day06a_input.txt  Day06a_preprocess_input.ml  Day06a_tb.ml  Day06a_v.ml  dune
Days/Day06b/: Day06b.ml  Day06b_input.txt  Day06b_preprocess_input.ml  Day06b_tb.ml  Day06b_v.ml  dune
Days/Day07a/: Day07a.ml  Day07a_tb.ml  Day07a_v.ml  dune
Days/Day07b/: Day07b.ml  Day07b_tb.ml  Day07b_v.ml  dune
Days/Day09a/: Day09a.ml  Day09a_tb.ml  Day09a_v.ml  dune
Days/Day09b/: Day09b.ml  Day09b_tb.ml  Day09b_v.ml  dune
Days/Day10a/: Day10a.ml  Day10a_tb.ml  Day10a_v.ml  dune
Days/Day11a/: Day11a.ml  Day11a_input.txt  Day11a_preprocess_input.ml  Day11a_tb.ml  Day11a_v.ml  dune
Days/Day11b/: Day11b.ml  Day11b_input.txt  Day11b_preprocess_input.ml  Day11b_tb.ml  Day11b_v.ml  dune
Days/Day12/: Day12.ml  Day12_input.txt  Day12_tb.ml  Day12_v.ml  dune
Days/tpl/: DayXX.ml  DayXX_tb.ml  DayXX_v.ml  dune
common_modules/: Binary_to_BCD.ml  Counter.ml  MultiDigitDisplay.ml  SS_Display.ml  SerialTB.ml  UART_Decoder.ml  dune
verilog_build/: apio.ini  faulty_uart_edits.sv  sync.sv  top.sv  top_tb.sv
