(library
 (name Day01a)
 (modules Day01a)
 (libraries hardcaml AdventLib)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day01a_v)
 (modules Day01a_v)
 (libraries hardcaml Day01a)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day01a_tb)
 (modules Day01a_tb)
 (libraries hardcaml hardcaml_waveterm AdventLib Day01a)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))
