(library
 (name Day02b)
 (modules Day02b)
 (libraries hardcaml AdventLib)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day02b_v)
 (modules Day02b_v)
 (libraries hardcaml Day02b)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day02b_tb)
 (modules Day02b_tb)
 (libraries hardcaml hardcaml_waveterm AdventLib Day02b)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))
