(library
 (name Day11b)
 (modules Day11b)
 (libraries hardcaml AdventLib)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day11b_v)
 (modules Day11b_v)
 (libraries hardcaml Day11b)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day11b_tb)
 (modules Day11b_tb)
 (libraries hardcaml hardcaml_waveterm AdventLib Day11b)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name Day11b_preprocess_input)
 (modules Day11b_preprocess_input))
